# renku-notebooks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  Dockerfile  Dockerfile.tests  Makefile  Pipfile  README.md  README.rst  chartpress.yaml  example.config.hocon  github_deploy_key.enc  hibernate-script.py  impersonate.py  install_helm.sh  patch-script.py  pyproject.toml  run-telepresence.sh  secrets.tar.enc  setup.cfg  test-schema.py  test.py  test.sh  test.yaml  travis-deploy.sh
.github/: CODEOWNERS  dependabot.yaml  main.workflow
.github/workflows/: acceptance-tests.yml  ci.yml  combine-dependabot-updates.yml  integration-tests.yml  scheduled-ci-cleanup.yml  test.yml
.travis/: travis-deploy.sh  travis-functions.sh
clean_user_registry_secrets/: Dockerfile  Pipfile  clean_user_registry_secrets.py
cull_secrets/: Dockerfile  Pipfile  clean_user_registry_secrets.py
git-clone/: Dockerfile  clone.sh  entrypoint.sh
git-clone/tests/: conftest.py
git-https-proxy/: Dockerfile  add_header.py  config_check.go  go.mod  go.sum  main.go  main_test.go  mitmproxy.js  package-lock.json  package.json
git-https-proxy/config/: config.go  config_test.go
git-https-proxy/config2/: config.go
git-https-proxy/config_old/: config.go
git-https-proxy/proxy/: main.go
git-https-proxy/token_store/: main.go
git-https-proxy/tokenstore/: main.go  main_test.go
git-rpc-server/: Dockerfile  Pipfile  rpc-server.py
git-rpc-server/git_rpc_server/: config.py  run.py  server.py
git-rpc-server/git_rpc_server/methods/: git.py  resources.py
git-sidecar/: Dockerfile  clone.sh
git_clone/: Dockerfile  Pipfile  clone.py  clone.sh  config.py  errors.py  git_cli.py  git_cloner.py  setup.cfg
git_clone/tests/: conftest.py  test_git_cli.py
git_services/: Dockerfile.init  Dockerfile.sidecar  pyproject.toml  setup.cfg
git_services/git_services/cli/: __init__.py  sentry.py
git_services/git_services/init/: clone.py  cloner.py  config.py  errors.py
git_services/git_services/sidecar/: app.py  config.py  errors.py  gunicorn.conf.py  renku_cli_config.py  rpc_methods.py  rpc_server.py  run_command.py
git_services/git_services/sidecar/commands/: base.py
git_services/tests/: conftest.py  test_autosave.py  test_git_cli.py  test_init_clone.py  test_rpc_server.py
helm-chart/: chartpress.yaml  make-values-tmp.py  minikube-values.yaml
helm-chart/datashim/: Chart.yaml  README.md  values.yaml
helm-chart/datashim/templates/: crds.yaml  csi-driver-s3.yaml  daemonset-h3.yaml  daemonset-nfs.yaml  daemonset-s3.yaml  deployment.yaml  mutating-webhook-config.yaml  namespace.yaml  rbac-common.yaml  rbac-h3.yaml  rbac-nfs.yaml  rbac-s3.yaml  secrets.yaml  (+12 more)
helm-chart/notebooks/: Chart.yaml
helm-chart/remove-crds-post-render/: README.md  kustomization.yaml  post-render-hook.sh
helm-chart/renku-notebooks/: Chart.yaml  minikube-values.yaml  requirements.yaml  values.schema.json  values.yaml
js-watcher/: Dockerfile  README.md  cache.go  cache_collection.go  cache_test.ago  config.go  errors.go  go.mod  go.sum  jupyter-server.go  main.go  middlewares.go  routes.go  server.go  server_routes.go
jupyterhub/: Dockerfile  jupyterhub-k8s.Dockerfile  requirements-k8s.txt  requirements.txt  spawners.py
k8s-watcher/: Dockerfile  README.md  cache.go  cache_collection.go  config.go  go.mod  go.sum  main.go  server.go  server_routes.go
liveness-detector/: Dockerfile  README.md  pyproject.toml
liveness-detector/liveness_detector/: __init__.py  activity_watcher.py
liveness-detector/scripts/: entrypoint-hook.sh  entrypoint-init-container.sh
liveness-detector/test/: test_server.py  test_watcher.py
load_tests/: pod.yaml  small_crd.yaml  test_response_time.py  test_response_time_pods.py  test_spec.yaml
manifests/: script.sh  smarter-device-manager.yaml  workload-with-sidecar.yaml  workload.yaml
notebooks/: notebooks_service.py
renku_notebooks/: __init__.py  config.py  error_handling.py  errors.py  wsgi.py
renku_notebooks/api/: __init__.py  auth.py  custom_fields.py  decorators.py  health.py  notebooks.py  schemas.py
renku_notebooks/config/: __init__.py  dynamic.py  server_options.py  static.py
renku_notebooks/errors/: __init__.py  common.py  intermittent.py  programming.py  user.py  utils.py
renku_notebooks/util/: __init__.py  _gitlab.py  _jupyterhub.py  check_image.py  clean-user-registry-secrets.py  clean_user_registry_secrets.py  cryptography.py  file_size.py  gitlab_.py  jupyterhub_.py  kubernetes_.py  misc.py  repository.py  retries.py  server_options.py
resource_migrations/: 1.3.0.py  README.md  config.py  migration_1.py  run_all.py
resource_schema_migrations/: README.md  config.py  migration_1.py  run_all.py
secrets-mount/: Dockerfile  pyproject.toml
secrets-mount/secrets_mount/: __init__.py  __main__.py
secrets-mount/tests/: __init__.py  test_decryption.py
singleuser/: Dockerfile  requirements.txt
src/: __init__.py  notebooks_service.py
src/templates/: server_status.html
src/ui/: README.md  package-lock.json  package.json
ssh-jump-host/: Dockerfile  sshd_config
tests/: conftest.py  dummy_jupyterhub_config.py  dummy_server_options.json  dummy_server_options_ui.json  rules.toml  test-public-image-checks.py  test_auth.py  test_autosaves.py  test_clean_user_registry_secrets.py  test_jupyterhub.py  test_notebook.py  test_schema_validation.py  traefik.toml
tests/integration/: README.md  conftest.py  test_auth.py  test_autosaves.py  test_image_check_endpoint.py  test_image_check_logic.py  test_requesting_non_existent_resources.py  test_server_options.py  test_session_crash_errors.py  test_session_creation.py  test_session_persistence.py  test_smoke.py  utils.py
tests/unit/: conftest.py  dummy_server_defaults.json  dummy_server_options.json  test_auth.py  test_autosaves.py  test_custom_fields.py  test_k8s_client.py  test_notebook.py  test_public_image_checks.py  test_schema_validation.py  test_server_options.py  test_utils.py
tests/utils/: classes.py
tests/with_local_cluster/: README.md  conftest.py  test_server_creation.py
(+88 files in other folders)
