[tool.poetry]
name = "renku-notebooks"
version = "1.8.0"
description = "An API service to provide jupyter notebooks for the Renku platform."
authors = ["Renku team <renku@datascience.ch>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.8"
docker = "*"
python-gitlab = "*"
flask = "*"
escapism = "*"
kubernetes = "*"
gunicorn = "*"
requests = "*"
pyyaml = ">=4.2b1"
urllib3 = ">=1.24.2"
sentry-sdk = {extras = ["flask"], version = "*"}
gevent = "*"
apispec-webframeworks = "*"
webargs = "*"
boto3 = "*"
pyjwt = "<3.0.0"
marshmallow = "*"
apispec = {extras = ["marshmallow"], version = "*"}
importlib-metadata = "*"
dataconf = "^2.1.3"
azure-storage-blob = "^12.14.1"

[tool.poetry.dev-dependencies]
pylint = "*"
chartpress = "*"
flake8 = "<5.0.0"
pytest-flake8 = "*"
pytest = "*"
black = "==22.8.0"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-mock = "*"
ptvsd = "~=4.2"
typed-ast = "*"
typing-extensions = "*"
semver = "*"
importlib-metadata = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
