[tool.poetry]
name = "renku-notebooks"
version = "1.19.1"
description = "An API service to provide jupyter notebooks for the Renku platform."
authors = ["Renku team <renku@datascience.ch>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
docker = "*"
python-gitlab = "*"
flask = "*"
escapism = "*"
kubernetes = "*"
gunicorn = "*"
requests = "*"
pyyaml = ">=4.2b1"
urllib3 = ">=1.24.2"
sentry-sdk = {extras = ["flask"], version = "*"}
gevent = "*"
apispec-webframeworks = "*"
webargs = "*"
pyjwt = "<3.0.0"
marshmallow = "*"
apispec = {extras = ["marshmallow"], version = "*"}
importlib-metadata = "*"
dataconf = "^2.1.3"
azure-storage-blob = "^12.19.0"
boto3 = "^1.28.26"

[tool.poetry.dev-dependencies]
pylint = "*"
chartpress = "*"
flake8 = "^6.0.0"
pytest = "*"
black = "^23.12.1"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-mock = "*"
ptvsd = "~=4.2"
typed-ast = "*"
typing-extensions = "*"
semver = "*"
importlib-metadata = "*"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
show-source = true
exclude = [
    "__pycache__",
    "git_services",
]
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "--black -v"
testpaths = ["renku_notebooks", "tests/unit", "tests/integration"]
