[tool.poetry]
name = "renku-notebooks"
version = "1.19.1"
description = "An API service to provide jupyter notebooks for the Renku platform."
authors = ["Renku team <renku@datascience.ch>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
docker = "*"
python-gitlab = "*"
flask = "*"
escapism = "*"
kubernetes = "*"
gunicorn = "*"
requests = "*"
pyyaml = ">=4.2b1"
urllib3 = ">=1.24.2"
sentry-sdk = {extras = ["flask"], version = "*"}
gevent = "*"
apispec-webframeworks = "*"
webargs = "*"
pyjwt = "<3.0.0"
marshmallow = "*"
apispec = {extras = ["marshmallow"], version = "*"}
importlib-metadata = "*"
dataconf = "^2.1.3"

[tool.poetry.group.dev.dependencies]
chartpress = "*"
pytest = "*"
pre-commit = "*"
pytest-cov = "*"
pytest-mock = "*"
ptvsd = "~=4.2"
typed-ast = "*"
typing-extensions = "*"
semver = "*"
importlib-metadata = "*"
ruff = "^0.4.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
output-format = "full"
include = ["*.py", "*.pyi"]

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pydocstyle
  "D",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # pyupgrade
  "UP",
  # flake8-simplify
  "SIM",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D211",
  "D213",
  "D401",
  "E202",
  "E226",
  "E231",
  "UP007",
  "UP038"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["renku_notebooks", "tests/unit", "tests/integration"]
