[tool.poetry]
name = "git_services"
version = "0.1.0"
description = ""
authors = ["Swiss Data Science Center <info@datascience.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.1"
dataconf = "^2.1.3"
json-rpc = "^1.14.0"
sentry-sdk = {extras = ["flask"], version = "^1.20.0"}
Flask = "2.2.3"
gevent = "^22.10.2"
gunicorn = "^20.1.0"
renku = "2.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.17.2"
pytest-flake8 = "^1.0.7"
pytest = "^7.3.1"
black = "^22.12.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
flake8 = "3.9.2"
flakehell = "^0.9.0"

[tool.pytest.ini_options]
flake8-ignore = ["E203", "W503"]
addopts = "--flake8 --black -v"
testpaths = ["git_services", "tests"]

[tool.flakehell]
max_line_length = 100
ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100