[tool.poetry]
name = "git_services"
version = "0.1.0"
description = ""
authors = ["Swiss Data Science Center <info@datascience.ch>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.28.1"
dataconf = "^2.3.0"
json-rpc = "^1.14.0"
sentry-sdk = {extras = ["flask"], version = "^1.40.5"}
Flask = "2.2.5"
gevent = "^23.9.0"
gunicorn = "^21.2.0"
renku = "2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"

[tool.pytest.ini_options]
flake8-ignore = ["E203", "W503"]
addopts = "--black -v"
testpaths = ["git_services", "tests"]

[tool.flake8]
max-line-length = 100
show-source = true
exclude = [
    "__pycache__",
]
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100