[tool.poetry]
name = "git_services"
version = "0.1.0"
description = ""
authors = ["Swiss Data Science Center <info@datascience.ch>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.28.1"
dataconf = "^3.2.0"
json-rpc = "^1.14.0"
sentry-sdk = {extras = ["flask"], version = "^2.42.0"}
Flask = "3.0.3"
gevent = "^25.9.1"
gunicorn = "^23.0.0"
renku = "2.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.15.1"
ruff = "^0.14.0"


[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["git_services", "tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
output-format = "full"
include = ["*.py", "*.pyi"]

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pydocstyle
  "D",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # pyupgrade
  "UP",
  # flake8-simplify
  "SIM",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D211",
  "D213",
  "D401",
  "E202",
  "E226",
  "E231",
  "UP007",
  "UP038"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

